Options panel dynamic style

--- a/styles/dark/theme.css
+++ b/styles/dark/theme.css
@@ -1,4 +1,4 @@
-/* Dark theme styles */
+/* Dark theme CSS definitions */
 
 :root {
     --color-primary: white;
@@ -13,179 +13,5 @@
     --background-color-grey-600: #757575;
 
     --background-color-blue-400: #42a5f5;
-}
-
-body {
-    background-color: var(--background-color-primary) !important;
-    color: var(--color-primary);
-}
-
-
-/* Popups */
-.popup-menu ul {
-    background-color: var(--background-color-grey-900) !important;
-}
-
-.popup-menu a {
-    background-color: var(--background-color-grey-900) !important;
-    color: var(--color-primary) !important;
-}
-
-.popup-menu a:hover {
-    color: var(--color-secondary) !important;
-}
-
-
-/* Navigation bar */
-.user-function .btn-primary, .visitor-function .btn-primary {
-    background-color: var(--background-color-grey-800) !important;
-}
-
-.user-function .btn-primary, .visitor-function .btn-primary:hover {
-    background-color: var(--background-color-grey-700) !important;
-}
-
-
-/* Notification menu */
-.notification-menu {
-    background-color: var(--background-color-grey-900) !important;
-    border: none !important;
-}
-
-.notification-menu .title {
-    border-color: var(--background-color-grey-700) !important;
-}
-
-.notification-menu .title h3 {
-    color: var(--color-primary) !important;
-}
-
-.notification-list li a.item {
-    background-color: var(--background-color-grey-900) !important;
-    color: var(--color-primary) !important;
-    border-bottom-color: var(--background-color-grey-700) !important;
-}
-
-.notification-menu .bumper {
-    background-color: var(--background-color-grey-900) !important;
-    border-top-color: var(--background-color-grey-700)
-}
-
-.notification-menu .bumper a.see-all {
-    color: var(--color-primary) !important;
-}
-
-.notification-menu .bumper a.see-all:hover {
-    color: var(--color-secondary) !important;
-}
-
-
-/* Upload modal */
-section.modal.upload .source {
-    color: var(--color-primary) !important;
-    border-color: var(--background-color-primary) !important;
-}
-
-section.modal.upload .source:hover {
-    background-color: var(--background-color-grey-800) !important;
-}
-
-section.modal.upload .source.file span.btn {
-    background-color: var(--background-color-grey-700) !important;
-}
-
-.source.file:after {
-    filter: invert(0.7)
-}
-
-.source.pic-url:after {
-    filter: invert(0.7)
-}
-
-.source.vid-url:after {
-    filter: invert(0.7)
-}
-
-a.btn-close {
-    filter: invert(1)
-}
-
-
-/* Left sidebar */
-.section-sidebar header h3 {
-    color: var(--color-primary) !important;
-}
-
-.section-sidebar .nav .label {
-    color: var(--color-secondary) !important;
-}
-
-.icon {
-    filter: invert(1)
-}
-
-.section-sidebar .nav li.selected .label {
-    background-color: var(--background-color-grey-700) !important;
-    color: var(--color-primary) !important;
-}
-
-.section-sidebar .nav li.selected .label:hover {
-    background-color: var(--background-color-grey-700) !important;
-}
-
-.section-sidebar .nav li .label:hover {
-    background-color: var(--background-color-grey-800) !important;
-}
-
-
-/* Right sidebard */
-section.block-feature-cover a {
-    color: var(--color-secondary) !important;
-}
-
-section.block-social-love .social-love a.instagram-follow {
-    color: var(--color-secondary);
-    border: none !important;
-}
-
-
-/* Main body */
-.featured-tag a {
-    color: var(--color-primary) !important;
-    background-color: var(--background-color-grey-800) !important;
-}
-
-section#list-view-2 article {
-    border-top: none !important;
-}
-
-section#list-view-2 h1 {
-    color: var(--color-primary) !important;
-}
-
-.btn-vote .more:active {
-    background-color: rgba(0,0,0,.04) !important;
-}
-
-.loading a.btn {
-    background-color: var(--background-color-primary) !important;
-    border: none !important;
-}
-
-section.modal {
-    background-color: var(--background-color-primary) !important;
-}
-
-
-/* Login */
-a.btn,input[type=submit] {
-    background-color: var(--background-color-grey-800) !important;
-}
-
-a.btn:hover,input[type=submit]:hover {
-    background-color: var(--background-color-grey-700) !important;
-}
-
-.btn-vote a {
-    border: none !important;
+    --background-color-green-400: #66bb6a;
 }
