--- a/styles/dark/listing.css
+++ b/styles/dark/listing.css
@@ -1,18 +1,18 @@
 /* Dark theme styles for the user page */
 
 .activity-text {
-    color: var(--color-secondary) !important;
+    color: var(--color-secondary);
 }
 
 .profile .tab-bar ul.menu a.selected {
-    color: var(--color-primary) !important;
+    color: var(--color-primary);
     border-bottom-color: white;
 }
 
 .profile .tab-bar ul.menu a:hover {
-    color: var(--color-primary) !important;
+    color: var(--color-primary);
 }
 
 section#list-view-2 .activity-text a {
-    color: var(--color-secondary) !important;
+    color: var(--color-secondary);
 }
