--- a/styles/dark/options.css
+++ b/styles/dark/options.css
@@ -3,6 +3,10 @@ body {
     color: var(--color-secondary);
 }
 
+a {
+    color: var(--color-primary);
+}
+
 #status {
     color: var(--background-color-green-400);
 }
